--- a/pages/styles/letter.css
+++ b/pages/styles/letter.css
@@ -28,7 +28,6 @@
 /* 📜 Add Indents for a Book Feel */
 p {
     text-align: justify;
-    text-indent: 30px;
 }
 
 /* 📌 Center Images */
@@ -42,57 +41,43 @@ a:hover {
     text-decoration: underline;
 }
 
-
-.chatbox {
-    background-color: rgba(0, 0, 0, 0.685);
-    border: 2px solid #4A4A4A;
-    border-radius: 5px;
-    padding: 10px;
-    font-size: 16px;
-    color: #FFFFFF;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+.zh {
+    color: #040404;
+    font-family: "Noto Sans SC", sans-serif;
+    margin-bottom: 0.0em !important;
 }
 
-.message {
-    margin-bottom: 3px;
-    line-height: 1.4;
-    font-family: 'Noto Sans Traditional Chinese';
+.es {
+    color: #757575;
+    font-family: "Noto Sans", sans-serif;
+    margin-top: 0em;
+    margin-bottom: 1em;
 }
 
-.system-message {
-    color: #FFD700;
+.md-typeset details {
+    box-shadow: none;
+    border-radius: 15px !important;
+    border-color: #04040413 !important;
+    text-align: center;
+
 }
 
-.chat-message {
-    color: #FFFFFF;
+.md-typeset details summary {
+    background-color: #00000014 !important;
+    font-size: 1.1rem;
+    text-align: center;
 }
 
-.private-message {
-    color: #FF69B4;
+.md-typeset details p {
+    color: #757575;
+    font-family: "Noto Sans", sans-serif;
+    font-size: 0.7rem;
+    text-align: center;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
-.party-message {
-    color: #00FF00;
-}
-
-.clan-message {
-    color: #00BFFF;
-}
-
-.shout-message {
-    color: #FF4500;
-}
-
-.trade-message {
-    color: #FFA500;
-}
-
-.alliance-message {
-    color: #e9f360de;
-}
-
-.timestamp {
-    color: #A9A9A9;
-    font-size: 10px;
-    margin-right: 5px;
+.md-typeset details ::before,
+.md-typeset details ::after{
+    display: none !important;
 }
