--- a/pages/styles/letter.css
+++ b/pages/styles/letter.css
@@ -96,7 +96,7 @@ p {
 
 .float-left-mobile-off {
     float: left;
-    margin: 0 0 1em 1em;
+    margin: 0 1em 1em 0;
 }
 
 @media (max-width: 76.25rem) {
